--- a/src/app/Global.css
+++ b/src/app/Global.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.typewriter-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  /* height: 100vh; */
+  overflow: hidden;
+  /* background-color: #000; */
+  margin: 0;
+}
+
+.typewriter-text {
+  /* font-size: 2em; */
+  white-space: nowrap;
+  overflow: hidden;
+  /* border-right: 2px solid transparent; */
+  animation: typing 3s steps(40) infinite, blink-caret 0.75s step-end infinite;
+}
+
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent;
+  }
+}
